# ProjetIOC

./: .clang-format  .gitignore  CMakeLists.txt  README.md  graph2.cpp  graph2.hpp  weightedMaximumStableSolver.cpp  weightedMaximumStableSolver.hpp
csv/: randomizedHeuristic.csv  randomizedHeuristic2.csv
src/: graph2.cpp  graph2.hpp  graphNO.cpp  graphNO.hpp  stableSolver.cpp  stableSolver.hpp  weightedMaximumStableSolver.cpp  weightedMaximumStableSolver.hpp
test/: benchmark.cpp  testHeuristic.cpp  testStableSolver.cpp
test/RandomInstances/: instance1.col  instance2.col  instance3.col  instance4.col  instance5.col  instance6.col  instance7.col  instance8.col  instance9.col  instance_vener.col
test/instances/: custom.col  myciel2.col  test_chaine.txt
test/weighted/: source.txt
test/weighted/chosen/: instance_1.wcol
test/weighted/small/: a.wcol
